[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/screens/pokemon-creation-screen/dynamic_stats.gd" type="Script" id=1]
[ext_resource path="res://scenes/screens/pokemon-creation-screen/exp-value.gd" type="Script" id=2]
[ext_resource path="res://scenes/screens/pokemon-creation-screen/exp.gd" type="Script" id=3]
[ext_resource path="res://scenes/screens/pokemon-creation-screen/level.gd" type="Script" id=4]

[node name="DynamicStats" type="PanelContainer"]
margin_right = 126.0
margin_bottom = 56.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 195.0
margin_bottom = 183.0
custom_constants/separation = 10

[node name="Header" type="Label" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 14.0
text = "PokemonResourceDynamic #"

[node name="EV" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 188.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="VBoxContainer/EV"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "HP EV"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/EV"]
margin_left = 114.0
margin_right = 188.0
margin_bottom = 24.0
rect_min_size = Vector2( 74, 0 )
size_flags_horizontal = 10

[node name="PokeResourceId" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 188.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="VBoxContainer/PokeResourceId"]
margin_top = 5.0
margin_right = 103.0
margin_bottom = 19.0
text = "PokeResourceId"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PokeResourceId"]
margin_left = 114.0
margin_right = 188.0
margin_bottom = 24.0
rect_min_size = Vector2( 74, 0 )
size_flags_horizontal = 10
editable = false

[node name="Level" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 188.0
margin_bottom = 116.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="VBoxContainer/Level"]
margin_top = 5.0
margin_right = 34.0
margin_bottom = 19.0
text = "Level"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Level"]
margin_left = 130.0
margin_right = 188.0
margin_bottom = 24.0
size_flags_horizontal = 10
editable = false

[node name="Exp" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 188.0
margin_bottom = 142.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/Exp"]
margin_top = 1.0
margin_right = 22.0
margin_bottom = 15.0
text = "Exp"

[node name="HSlider" type="HSlider" parent="VBoxContainer/Exp"]
margin_left = 114.0
margin_right = 188.0
margin_bottom = 16.0
rect_min_size = Vector2( 74, 0 )
size_flags_horizontal = 10
max_value = 1e+06
rounded = true
tick_count = 4
ticks_on_borders = true

[node name="Exp value" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 188.0
margin_bottom = 176.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/Exp value"]
margin_top = 5.0
margin_right = 22.0
margin_bottom = 19.0
text = "Exp"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Exp value"]
margin_left = 114.0
margin_right = 188.0
margin_bottom = 24.0
rect_min_size = Vector2( 74, 0 )
size_flags_horizontal = 10
[connection signal="value_changed" from="VBoxContainer/Exp/HSlider" to="VBoxContainer/Exp value" method="_on_HSlider_value_changed"]
[connection signal="experience_changed" from="VBoxContainer/Exp value" to="VBoxContainer/Level" method="_on_Exp_value_experience_changed"]
[connection signal="experience_changed" from="VBoxContainer/Exp value" to="VBoxContainer/Exp" method="_on_Exp_value_experience_changed"]
[connection signal="text_entered" from="VBoxContainer/Exp value/LineEdit" to="VBoxContainer/Exp value" method="_on_LineEdit_text_entered"]
